# mecanywhere

./: .buildinfo  .dockerignore  .env  .gitignore  .gitmodules  README.md  compose.yaml  docker-compose-internal.yaml  docker-compose-proxy.yaml  docker-compose-sbip.yaml  docker-compose.yaml  genindex.html  index.html  load_po.bat  load_po.py  load_po.sh  nginx.conf  objects.inv  package-lock.json  pyproject.toml  search.html  searchindex.js  startup.bat  windows-startup.bat
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: environment.pickle  index.doctree
authentication/: Dockerfile  auth-startup.bat  config.json  config.py  dependencies.py  example.db  main.py  requirements.txt
did/: .dockerignore  DockerFile2  DockerFile3  Dockerfile.issuer  Dockerfile.verifier  README.md  did-local-startup.bat  pom.xml
did-go/: Dockerfile  go.mod  go.sum
docs/: README.md  algorithms.md  requirements.txt
example-tasks/: README.md
full_node/: Dockerfile.discovery  Dockerfile.transaction  config.json  fullnode-startup.bat  setup.py
light_node/: README.md  config.json  requirements.txt
pages/: deployment.html
payment/: .env.example  Dockerfile  README.md  config.json  config.py  contract.py  dependencies.py  main.py  openapi.json  payment-startup.bat  requirements.txt
po/: config.json  config.py  dependencies.py  example.db  main.py  openapi.json
proxy/: Dockerfile.nginx  nginx.conf
pymeca-actors/: .env.example  Dockerfile  DockerfileInternal  README.md  requirements.txt
server_host/: Dockerfile.host  executor_api.js  index.js  package-lock.json  (+3 more)
(+382 files in other folders)
